2025-02-02  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* suppresserrors.ch: Add \ignoreprimitiveerror
	as in pdfTeX and XeTeX.
	* eptex_version.h, eptex.ech:
	Bump version to 250202.

2025-01-27  Karl Berry  <karl@freefriends.org>

	* am/euptex.am (euptex-pool.c): exit 1 if makecpool failed.

2025-01-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* upkcat.test: Update tests.
	* euptex-widow.test, tests/eup-jchwidow.log,
	am/euptex.am: Add new tests for widow penalty originally
	written by Kitagawa-san.
	https://github.com/texjporg/tex-jp-build/issues/103
	* COPYRIGHT: copyright year.

2024-10-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* eptex.ech, etex.ch{0,1}, fam256,ch,
	pdfutils.ch, char-warnings-euptex.ch:
	Support Latin Unicode and 16bit OFM Level-0.
	Implement new kcatcode (latin_ucs(14)).
	* euptex-ofm.test, tests/eup-prim.{tex,log},
	tests/eup-ofm.{tex,log}, am/euptex.am:
	Add and update tests.
	* eptex_version.h, eptex.ech:
	Bump version to 241020.
	https://github.com/texjporg/tex-jp-build/issues/170

2024-10-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* euptex-prim.test, tests/eup-prim.{tex,log},
	am/euptex.am: Add a test.
	* eptex_version.h, eptex.ech:
	Bump version to 240930.

2024-09-30  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* eptex.ech: kcatcode (latin_ucs(14)) is removed
	since it will be supported in upTeX-2.00.

2024-09-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* euptex-{ctrlsym,kinsoku,prntknj}.test:
	Skip tests with updvitype if updvitype are not built.

2024-09-21  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* eptex.ech, pdfutils.ch:
	Better support for kcatcode=20 (modifier).
	* euptex-{ctrlsym,kinsoku,prntknj,ucs}.test,
	tests/{control-symbol,ctrlsym.tex,endlinechar,free_{ixsp,pena},
	inhibitglue,kinsoku_{search,table},postpena,printkanji,ucs}.tex,
	tests/eup-{endline,inhibitglue,jctrlsym,pknj-{e,s,u}}a.typ,
	tests/{endline,free_{ixsp,pena},jctrlsym,kinsoku_{search,table},
	pknj-{e,s,u},postpena,ucs-{e,s,u}}.log: