@@ -30,5 +30,6 @@ l.57 \showbox0
 \AAA ->Œ Œ Æ¡ ˚
 
 \mAAA ->macro:->Œ Œ Æ¡ ˚
-We have "2010. We do not have "2014. [1] )
+We have "2010. wd:5.24998pt, ht:3.40999pt, dp:2.70999pt, ic:0.0pt. We do not ha
+ve "2014. [1] )
 Output written on eup-ofm.dvi (1 page, 664 bytes).
