@@ -216,7 +216,7 @@ Here is how much of TeX's memory you used:
  24 strings out of 497XXX
  141 string characters out of 6215XXX
  7551 words of memory out of 5000000
- 1089 multiletter control sequences out of 15000+600000
+ 10XX multiletter control sequences out of 15000+600000
  3271 words of font info for 2 fonts, out of 8000000 for 9000
  0 hyphenation exceptions out of 8191
  6i,4n,2p,97b,26s stack positions out of 10000i,1000n,20000p,200000b,200000s
