@@ -1,0 +1,27 @@
+ restricted \write18 enabled.
+ %&-line parsing enabled.
+**up-cat.tex
+(./up-cat.tex
+begin-group character Á; end-group character Â.
+math shift character Ã.
+alignment tab character Ä.
+macro parameter character Å.
+superscript character Æ.
+subscript character Ç.
+the letter È.
+the character É.
+begin-group character ā; end-group character Ă.
+math shift character ă.
+alignment tab character Ą.
+macro parameter character ą.
+superscript character Ć.
+subscript character ć.
+the letter Ĉ.
+the character ĉ.
+math shift character ü.
+math shift character Č.
+superscript character þ.
+subscript character ÿ.
+[1] )
+(\end occurred when \ifx on line 101 was incomplete)
+Output written on up-cat.dvi (1 page, 372 bytes).
