@@ -1,3 +1,8 @@
+2025-02-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* euptex-{ofm,prntknj}.test, tests/eup-ofm.{tex,log},
+	tests/pknj-{e,s,u}.log: Update tests.
+
 2025-02-02  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
 
 	* suppresserrors.ch: Add \ignoreprimitiveerror
